--- a/JoannasBasicResume.css
+++ b/JoannasBasicResume.css
@@ -1,6 +1,6 @@
 header
-{background-color: #EA5283;
-  font-family: "cambria", fantasy;
+{ background-color: #EA5283;
+  font-family: "cambria", "fantasy";
   font-size: 2.5em;
 }
 aside {
@@ -12,7 +12,7 @@ aside {
   float: l;
 }
 footer
-{background-color: #EA5283;
-  font-family: "cambria", fantasy;
+{ background-color: #EA5283;
+  font-family: "cambria", "fantasy";
   font-size: 1em;
 }
